Added dropdown elements to home screem

--- a/style.css
+++ b/style.css
@@ -27,10 +27,6 @@ p {
 }
 
 div {
-  width: 800px;
-  height: 300px;
-  border: 15px solid green;
-  padding: 50px;
   margin: 20px;
 }
 
@@ -43,7 +39,7 @@ button {
   font-size: 16px;
   cursor: pointer;
   display: inline-block;
-  /* joe how do I change the alignment? */
+  /*place inside nav element, float:right property, give new clear:both or clear:right */
 
 }
 
@@ -58,3 +54,61 @@ button:hover {
 .warning {color: orange;}
 .danger {color: red;}
 .default {color: black;}
+
+
+
+
+
+
+/* Dropdown Button */
+.dropbtn {
+  background-color: #3498DB;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #2980B9;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
+
+
+
+
+body {
+ background-image: url("background2");
+ background-color: #cccccc;
+}
