--- a/studentPage.style.css
+++ b/studentPage.style.css
@@ -55,15 +55,66 @@ p {
   width: 100%;
 }
 
-button {
+.huge {
+  color: white;
+  font-family:'Source Serif Pro', serif;
+  letter-spacing: .5px;
+  font-size: 100px;
+  line-height: 10px;
+  text-align: center;
+  padding-bottom: 10px;
+}
+
+.title {
+  color: grey;
+  font-family:'Kumbh Sans', sans-serif;
+  font-size: 30px;
+  letter-spacing: .5px;
+  line-height: 20px;
+  text-align: left;
+}
+
+
+
+fieldset {
+  color: grey;
+  font-family:'Kumbh Sans', sans-serif;
+  letter-spacing: .5px;
+  font-size: 18px;
+  line-height: 10px;
+  text-align: left;
+  padding-bottom: 10px;
+  border: none;
+  width: 100%;
+  padding: 12px 0px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+.btn-btn-primary {
   border: none;
   font-family:'Kumbh Sans', sans-serif;
-  background-color: inherit;
+  background-color: darkgrey;
+  color: white;
   border-radius: 10px;
   padding: 14px 28px;
   font-size: 16px;
   cursor: pointer;
   display: inline-block;
+  align-items: right;
+}
+
+button {
+  border: none;
+  font-family:'Kumbh Sans', sans-serif;
+  background-color: darkgrey;
+  color: white;
+  border-radius: 10px;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  display: inline-block;
+  align-items: right;
   /*place inside nav element, float:right property, give new clear:both or clear:right */
 
 }
@@ -87,30 +138,38 @@ button:hover {
 
 /* Dropdown Button */
 .dropbtn {
-  background-color: #3498DB;
+  background-color: darkgrey;
   color: white;
   padding: 16px;
   font-size: 16px;
   border: none;
   cursor: pointer;
+  align-self: right;
+  align-items: right;
+  align-content: right;
 }
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
+  background-color: grey;
 }
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-  position: relative;
+  position: right;
+  align-items: right;
+  align-self: right;
+  align-content: right;
   display: inline-block;
+
 }
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
+  font-family:'Kumbh Sans', sans-serif;
   position: absolute;
-  background-color: #f1f1f1;
+  background-color: white;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -118,7 +177,7 @@ button:hover {
 
 /* Links inside the dropdown */
 .dropdown-content a {
-  color: black;
+  color: dimgrey;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
