--- a/style.css
+++ b/style.css
@@ -1,23 +1,21 @@
-body {
-  background-color: white;
-}
+
 
 h1 {
-  color: grey;
+  color: dimgray;
   font-family: 'Source Serif Pro', serif;
   letter-spacing: 1px;
   text-align: left;
 }
 
 h2 {
-  color: grey;
+  color: dimgray;
   font-family: 'Source Serif Pro', serif;
   letter-spacing: 1px;
   text-align: left;
 }
 
 h3 {
-  color: grey;
+  color: dimgray;
   font-family:'Kumbh Sans', sans-serif;
   letter-spacing: 1px;
   text-align: left;
@@ -30,7 +28,7 @@ p {
   word-spacing: 3px;
   letter-spacing: 1px;
   line-height: 1.4;
-  color: grey
+  color: dimgray
 }
 
 div {
@@ -40,12 +38,14 @@ div {
 button {
   border: none;
   font-family:'Kumbh Sans', sans-serif;
-  background-color: inherit;
+  background-color: darkgrey;
+  color: white;
   border-radius: 10px;
   padding: 14px 28px;
   font-size: 16px;
   cursor: pointer;
   display: inline-block;
+  align-items: right;
   /*place inside nav element, float:right property, give new clear:both or clear:right */
 
 }
@@ -69,30 +69,38 @@ button:hover {
 
 /* Dropdown Button */
 .dropbtn {
-  background-color: #3498DB;
+  background-color: darkgrey;
   color: white;
   padding: 16px;
   font-size: 16px;
   border: none;
   cursor: pointer;
+  align-self: right;
+  align-items: right;
+  align-content: right;
 }
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
+  background-color: grey;
 }
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-  position: relative;
+  position: right;
+  align-items: right;
+  align-self: right;
+  align-content: right;
   display: inline-block;
+
 }
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
+  font-family:'Kumbh Sans', sans-serif;
   position: absolute;
-  background-color: #f1f1f1;
+  background-color: white;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -100,7 +108,7 @@ button:hover {
 
 /* Links inside the dropdown */
 .dropdown-content a {
-  color: black;
+  color: dimgrey;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -114,10 +122,19 @@ button:hover {
 
 
 
-
+/*
 body {
  background-image: url('photos/background2.jpeg');
  background-repeat: no-repeat;
- width: auto;
- height: auto;
+ width: inherit;
+ height: inherit;
+}
+*/
+
+html {
+  background: url('photos/background2.jpeg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
