--- a/studentPage.style.css
+++ b/studentPage.style.css
@@ -55,6 +55,11 @@ p {
   width: 100%;
 }
 
+image {
+  width: 100%;
+  height: 100px;
+}
+
 .huge {
   color: white;
   font-family:'Source Serif Pro', serif;
@@ -107,7 +112,7 @@ fieldset {
 button {
   border: none;
   font-family:'Kumbh Sans', sans-serif;
-  background-color: darkgrey;
+  background-color: cornFlowerblue;
   color: white;
   border-radius: 10px;
   padding: 14px 28px;
@@ -138,7 +143,7 @@ button:hover {
 
 /* Dropdown Button */
 .dropbtn {
-  background-color: darkgrey;
+  background-color: cornFlowerblue;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -156,11 +161,11 @@ button:hover {
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-  position: right;
-  align-items: right;
-  align-self: right;
-  align-content: right;
-  display: inline-block;
+ display: inline;
+  left: 100px;
+  right: 0px;
+  width: 500px;
+padding-left: 40px;
 
 }
 
